// internal/product_service/adapter/controller/grpc/proto/product_service.proto
syntax = "proto3";

package product;

option go_package = "github.com/hydr0g3nz/ecom_back_microservice/internal/product_service/adapter/grpc/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ProductService {
  // Product operations
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc GetProductBySKU(GetProductBySKURequest) returns (ProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
  rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (ListProductsResponse);
  
  // Category operations
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc GetCategory(GetCategoryRequest) returns (CategoryResponse);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (google.protobuf.Empty);
  rpc GetChildCategories(GetChildCategoriesRequest) returns (ListCategoriesResponse);
  
  // Inventory operations
  rpc GetInventory(GetInventoryRequest) returns (InventoryResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (InventoryResponse);
  rpc ReserveStock(ReserveStockRequest) returns (google.protobuf.Empty);
  rpc ConfirmReservation(ReserveStockRequest) returns (google.protobuf.Empty);
  rpc CancelReservation(ReserveStockRequest) returns (google.protobuf.Empty);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);

  rpc PatchProduct(PatchProductRequest) returns (ProductResponse);
  rpc PatchCategory(PatchCategoryRequest) returns (CategoryResponse);
  rpc PatchInventory(PatchInventoryRequest) returns (InventoryResponse);
}

// Product messages
message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string category_id = 4;
  string image_url = 5;
  string sku = 6;
  string status = 7;
}

message GetProductRequest {
  string id = 1;
}

message GetProductBySKURequest {
  string sku = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  map<string, string> filters = 3;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category_id = 5;
  string image_url = 6;
  string sku = 7;
  string status = 8;
}

message DeleteProductRequest {
  string id = 1;
}

message GetProductsByCategoryRequest {
  string category_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category_id = 5;
  string image_url = 6;
  string sku = 7;
  string status = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message ListProductsResponse {
  int32 total = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
  repeated ProductResponse products = 5;
}

// Category messages
message CreateCategoryRequest {
  string name = 1;
  string description = 2;
  optional string parent_id = 3;
}

message GetCategoryRequest {
  string id = 1;
}

message ListCategoriesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message UpdateCategoryRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  optional string parent_id = 4;
}

message DeleteCategoryRequest {
  string id = 1;
}

message GetChildCategoriesRequest {
  string parent_id = 1;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  optional string parent_id = 4;
  int32 level = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ListCategoriesResponse {
  int32 total = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
  repeated CategoryResponse categories = 5;
}

// Inventory messages
message GetInventoryRequest {
  string product_id = 1;
}

message UpdateInventoryRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message ReserveStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  string product_id = 1;
  int32 quantity = 2;
  bool in_stock = 3;
}

message InventoryResponse {
  string product_id = 1;
  int32 quantity = 2;
  int32 reserved = 3;
  int32 available = 4;
  google.protobuf.Timestamp updated_at = 5;
}
message PatchProductRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double price = 4;
  optional string category_id = 5;
  optional string image_url = 6;
  optional string sku = 7;
  optional string status = 8;
}

// New message for patch category request
message PatchCategoryRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string parent_id = 4;
}

// New message for patch inventory request
message PatchInventoryRequest {
  string product_id = 1;
  optional int32 quantity = 2;
  optional int32 reserved = 3;
}